--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.HomeActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -35,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="200dp">
+        android:layout_marginTop="100dp">
 
         <TextView
             android:id="@+id/text_types"
@@ -128,7 +136,7 @@
             android:layout_weight="1"
             android:textColor="@color/black"
             android:buttonTint="@color/colorAccentDark"
-            android:text="Cheap - 20$"
+            android:text="Cheap - 20£"
             android:textSize="13sp" />
 
 
@@ -139,7 +147,7 @@
             android:layout_weight="1"
             android:textColor="@color/black"
             android:buttonTint="@color/colorAccentDark"
-            android:text="Affordable - 50$"
+            android:text="Affordable - 50£"
             android:textSize="13sp" />
 
         <RadioButton
@@ -149,20 +157,49 @@
             android:layout_weight="1"
             android:textColor="@color/black"
             android:buttonTint="@color/colorAccentDark"
-            android:text="Premium - 100$"
+            android:text="Premium - 100£"
             android:textSize="13sp" />
         </RadioGroup>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="100dp"
-        android:layout_marginBottom="50dp"
-        android:onClick="Submit"
-        android:background="@drawable/btn_rounded_primary"
-        android:text="Book Appointment"
-        android:textColor="@color/white"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/radio_group"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_rounded_primary"
+            android:onClick="Submit"
+            android:id="@+id/booking_btn"
+            android:text="Book Appointment"
+            android:textColor="@color/white" />
 
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/booking_btn"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_rounded_primary"
+            android:onClick="Contact"
+            android:id="@+id/contact"
+            android:text="Contact US"
+            android:textColor="@color/white" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/contact"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_rounded_primary"
+            android:onClick="Logout"
+            android:text="Logout"
+            android:textColor="@color/white" />
+
+    </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
