--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -108,69 +108,87 @@
         android:textColor="@android:color/white" />
 
 
-    <TextView
-        android:id="@+id/txt_package"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/bt_pick"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="50dp"
-        android:text="Select a Package"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-
-        <RadioGroup
+        <TextView
+            android:id="@+id/txt_package"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/radio_group"
-            android:layout_below="@+id/txt_package"
-            android:layout_marginTop="15dp"
+            android:layout_below="@+id/bt_pick"
             android:layout_marginLeft="30dp"
-            >
-        <RadioButton
-            android:id="@+id/rbtn_cheap"
-            android:layout_width="fill_parent"
+            android:layout_marginTop="30dp"
+            android:onClick="package_show"
+            android:text="Select a Package"
+            android:textColor="@color/orange_400"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:buttonTint="@color/colorAccentDark"
-            android:text="Cheap - 20£"
-            android:textSize="13sp" />
+            android:id="@+id/progressbar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:visibility="gone"
+            android:layout_below="@+id/txt_package"
+            />
 
-
-        <RadioButton
-            android:id="@+id/rbtn_affordable"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:buttonTint="@color/colorAccentDark"
-            android:text="Affordable - 50£"
-            android:textSize="13sp" />
-
-        <RadioButton
-            android:id="@+id/rbtn_premium"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:buttonTint="@color/colorAccentDark"
-            android:text="Premium - 100£"
-            android:textSize="13sp" />
-        </RadioGroup>
-
-        <Button
+        <RelativeLayout
+            android:id="@+id/rl_package"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/radio_group"
+            android:layout_below="@+id/txt_package"
+            android:visibility="gone">
+
+
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="15dp">
+
+                <RadioButton
+                    android:id="@+id/rbtn_cheap"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccentDark"
+                    android:text="Cheap - 20£"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+
+
+                <RadioButton
+                    android:id="@+id/rbtn_affordable"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccentDark"
+                    android:text="Affordable - 50£"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+
+                <RadioButton
+                    android:id="@+id/rbtn_premium"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccentDark"
+                    android:text="Premium - 100£"
+                    android:textColor="@color/black"
+                    android:textSize="13sp" />
+            </RadioGroup>
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/booking_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rl_package"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/btn_rounded_primary"
             android:onClick="Submit"
-            android:id="@+id/booking_btn"
             android:text="Book Appointment"
             android:textColor="@color/white" />
 
